objects/Internal_Signatory__c.object
<CustomObject>
    <fields>
        <fullName>ApplicableExhibit__c</fullName>
        <label>ApplicableExhibit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Heirarchy__c</fullName>
        <label>Entity Heirarchy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Heirarchy__c</fullName>
        <label>Product Heirarchy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>S_P_Internal_Legal_Entity1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>S&amp;P Internal Legal Entity1</label>
        <referenceTo>S_P_Internal_Legal_Entity__c</referenceTo>
        <relationshipLabel>Internal Signatory</relationshipLabel>
        <relationshipName>Internal_Signatory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>signatory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>signatory</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Internal_Signatory</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Internal Signatory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ApplicableExhibit__c</columns>
        <columns>Entity_Heirarchy__c</columns>
        <columns>Product_Heirarchy__c</columns>
        <columns>S_P_Internal_Legal_Entity1__c</columns>
        <columns>signatory__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Internal Signatory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Internal Signatory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>